--- a/home.html
+++ b/home.html
@@ -34,9 +34,9 @@ top:93%;
 <a  href="https://thebookiemonsterweb.wordpress.com/" target="_blank"> Wordpress </a>
 <a class="menu" href="https://www.goodreads.com/user/show/53549230-the-bookie-monster" target="_blank"> Goodreads </a>
 <a class="menu1" href="https://www.instagram.com/the.bookie.monster/?hl=en" target="_blank"> Bookstagram </a>
-<a class="menu2" href="file:///C:/Users/arwah/Desktop/home.html#home"> Home </a>
-<a class="menu3" href="file:///C:/Users/arwah/Desktop/about.html"> About </a>
-<a class="menu4" href="file:///C:/Users/arwah/Desktop/contact.html"> Contact </a>
+<a class="menu2" href="home.html#home"> Home </a>
+<a class="menu3" href="about.html"> About </a>
+<a class="menu4" href="contact.html"> Contact </a>
 <p class="text"> Hi, Arwah here! </p>
 </nav>
 </div>
